[tool.poetry]
name = "coulson"
version = "0.1"
description = "Control types of variables in runtime."
repository = "https://github.com/Tiendil/coulson"
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]
license = "BSD3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6"
pytest-cov = "^2"
pytest-xdist = "^2"
pytest-randomly = "^3"
pytest-clarity = "0.3.0a0"
pytest-random-order = "^1"
hypothesis = "^6"
pretty_errors = "^1"
six = "^1" # required by pytest-clarity

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "ERROR"
log_level = "ERROR"
xfail_strict = true
# clarity: -vv --diff-type=split
# cov: --cov=coulson
# random-order: --random-order
addopts = "--durations=3 -l --cov=coulson -vv --diff-type=split --random-order"
testpaths = ["tests"]